  based version.

* Added the FileLink class to hold links to files in the file system. The
  Version class will use this class in later versions. But for now it is used
  in IOMixin.

* Added the first ever mixin called IOMixin. It adds two new attributes to the
  mixed in class called ``inputs`` and ``outputs``. The inputs and outputs
  attributes are holding list of FileLink instances.

0.2.4.2
-------
* Renamed 'Scene Assembly' to 'Layout' in VersionTypes.

* Added support for Eyeon Fusion.

* Fixed Houdini environment.

* ``version_creator`` UI now lists users in alphabetical order.

* MayaEnv sets the frame range for Shot versions.

* Fixed nukeEnv for Windows, now the output path is correctly set.

0.2.4.1
-------
* Fixed titles of ``version_creator`` and ``status_manager`` UIs.

* Added screenshots to the documentation.

0.2.4
-----
* Added ``type`` attribute to the ``Asset`` class. The main intention is to
  be able to distinguish 'Props', 'Environment' etc. types of assets from each
  other.

* Added ``status`` attribute to the ``Version`` class. This attribute will help
  to track the status of the ``Asset`` or ``Shot`` version.

* Added a new UI called ``status_manager`` for viewing the Assets and Shots
  statuses.

* Added a new column to the ``version_creator`` UI which shows the status of
  the saved version.

* Added a new class called ``Client`` to manage ``Project`` clients.

* Added a new attribute ``client`` to the ``Project`` class to manage
  ``Client``s.

* Updated ``version_creator`` UI, it now shows the Shots in correct numerical
  order.

* Updated ``version_creator`` UI, it is now possible to change the Status or
  Browse the outputs of a Version by right clicking on the Previous Versions
  TableWidget.

* ``Version.status`` is now comparable with long status names, so comparing
  "WTS" with "Waiting To Start" will return True.

* Added the ``query`` method as a class method to the Base class in the